--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~9.0.7",
     "@angular/platform-browser-dynamic": "~9.0.7",
     "@angular/router": "~9.0.7",
+    "@types/leaflet": "^1.5.16",
     "leaflet": "^1.6.0",
     "leaflet-draw": "^1.0.4",
     "leaflet-heatmap": "^1.0.0",
